# bftgrid

./: .gitignore  Cargo.toml  README.md  crates.js  help.html  index.html  search-index.js  settings.html  shell.nix  src-files.js
.direnv/: flake-profile-2-link
.github/: copilot-instructions.md
aho_corasick/: all.html  enum.AhoCorasickKind.html  enum.Anchored.html  enum.MatchErrorKind.html  enum.MatchKind.html  enum.StartKind.html  index.html  struct.AhoCorasick.html  struct.AhoCorasickBuilder.html  struct.BuildError.html  struct.FindIter.html  struct.FindOverlappingIter.html  struct.Input.html  struct.Match.html  struct.MatchError.html  struct.PatternID.html  struct.PatternIDError.html  struct.Span.html  struct.StreamFindIter.html
anstream/: all.html  enum.ColorChoice.html  fn.stderr.html  fn.stdout.html  index.html  macro.eprint.html  macro.eprintln.html  macro.panic.html  macro.print.html  macro.println.html  struct.AutoStream.html  struct.StripStream.html  type.Stderr.html  type.Stdout.html
anstyle/: all.html  enum.AnsiColor.html  enum.Color.html  index.html  struct.Ansi256Color.html  struct.EffectIter.html  struct.Effects.html  struct.Reset.html  struct.RgbColor.html  struct.Style.html
anstyle_parse/: all.html  index.html  struct.AsciiParser.html  struct.Params.html  struct.ParamsIter.html  struct.Parser.html  struct.Utf8Parser.html  trait.CharAccumulator.html  trait.Perform.html  type.DefaultCharAccumulator.html
anstyle_query/: all.html  fn.clicolor.html  fn.clicolor_force.html  fn.is_ci.html  fn.no_color.html  fn.term_supports_ansi_color.html  fn.term_supports_color.html  fn.truecolor.html  index.html
bft-grid-actix/: Cargo.toml
bft-grid-actix/src/: bin.rs  lib.rs
bft-grid-core/: Cargo.toml
bft-grid-mt/: Cargo.toml
bft-grid-mt/src/: bin.rs  lib.rs
bft-grid-sim/: Cargo.toml
bft-grid-tokio/: Cargo.toml
bft-grid-tokio/src/: bin.rs  lib.rs
bftgrid-core/: Cargo.toml
bftgrid-core/src/: actor.rs  lib.rs
bftgrid-example/: Cargo.toml  README.md
bftgrid-example/src/: bin.rs  lib.rs  local.rs  network.rs  utils.rs
bftgrid-mt/: Cargo.toml  README.md
bftgrid-mt/src/: bin.rs  lib.rs  thread.rs  tokio.rs
bftgrid-sim/: Cargo.toml
bftgrid-sim/src/: bin.rs  lib.rs
bftgrid_core/: all.html  enum.ActorControl.html  enum.P2PNetworkError.html  index.html  sidebar-items.js  struct.MessageNotSupported.html  trait.ActorMsg.html  trait.ActorRef.html  trait.ActorSystem.html  trait.Joinable.html  trait.P2PNetwork.html  trait.P2PNetworkClient.html  trait.Task.html  trait.TypedHandler.html  trait.UntypedHandler.html  type.AnActorMsg.html  type.AnActorRef.html  type.P2PNetworkResult.html  type.UntypedHandlerBox.html
bftgrid_example/: all.html  fn.setup_logging.html  index.html
bftgrid_local_example/: all.html  fn.build_system.html  fn.main.html  index.html  sidebar-items.js  struct.Actor1.html  struct.Actor1ToActor2.html  struct.Actor2.html  struct.Ping.html  struct.System.html
bftgrid_mt/: all.html  enum.TokioRuntimeOrHandle.html  fn.get_async_runtime.html  fn.new_tokio_runtime.html  index.html  sidebar-items.js  struct.AsyncRuntime.html  struct.TokioRuntime.html  struct.TokioTask.html
bftgrid_network_example/: all.html  fn.main.html  index.html  sidebar-items.js  struct.Actor1.html  struct.Actor2.html  struct.Node1P2pNetworkInputHandler.html  struct.Node2P2pNetworkInputHandler.html  struct.NodeP2PNetworkInputHandler.html  struct.Ping.html
bftgrid_sim/: all.html  enum.SimulationEvent.html  index.html  sidebar-items.js  struct.InternalEvent.html  struct.NodeDescriptor.html  struct.SimulatedActor.html  struct.SimulatedActorRef.html  struct.SimulatedClock.html  struct.Simulation.html  struct.SimulationEventAtInstant.html  type.UntypedHandlerBox.html
bftgrid_sim_example/: all.html  fn.build_system.html  fn.main.html  index.html  sidebar-items.js  struct.Actor1.html  struct.Actor1ToActor2.html  struct.Actor2.html  struct.Ping.html  struct.System.html
colorchoice/: all.html  enum.ColorChoice.html  index.html
downcast_rs/: all.html  index.html  macro.impl_downcast.html  trait.Downcast.html  trait.DowncastSend.html  trait.DowncastSync.html
dyn_clone/: all.html  fn.arc_make_mut.html  fn.clone.html  fn.clone_box.html  fn.rc_make_mut.html  index.html  macro.clone_trait_object.html  trait.DynClone.html
env_filter/: all.html  index.html  struct.Builder.html  struct.Filter.html  struct.FilteredLog.html  struct.ParseError.html
env_logger/: all.html  constant.DEFAULT_FILTER_ENV.html  constant.DEFAULT_WRITE_STYLE_ENV.html  fn.builder.html  fn.from_env.html  fn.init.html  fn.init_from_env.html  fn.try_init.html  fn.try_init_from_env.html  index.html  struct.Builder.html  struct.Env.html  struct.Logger.html
futures/: all.html  index.html  macro.join.html  macro.pending.html  macro.pin_mut.html  macro.poll.html  macro.ready.html  macro.select.html  macro.select_biased.html  macro.stream_select.html  macro.try_join.html
futures_channel/: all.html  index.html
futures_core/: all.html  index.html  macro.ready.html
futures_executor/: all.html  fn.block_on.html  fn.block_on_stream.html  fn.enter.html  index.html  struct.BlockingStream.html  struct.Enter.html  struct.EnterError.html  struct.LocalPool.html  struct.LocalSpawner.html
futures_io/: all.html  index.html  trait.AsyncBufRead.html  trait.AsyncRead.html  trait.AsyncSeek.html  trait.AsyncWrite.html
futures_macro/: all.html  index.html  (+6 more)
(+11741 files in other folders)
