[package]
name = "bft-grid-mt"
version = "0.0.1"
edition = "2021"
authors = ["Fabio Tudone <fabtud@gmail.com>"]

[dependencies]
bft-grid-core = { path = "../bft-grid-core" }
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread", "sync", "time"] }
async-trait = "0.1.74"

[[bin]]
name = "bft-grid-mt"
path = "src/bin.rs"
