[package]
name = "bft-grid-tokio"
version = "0.0.1"
edition = "2021"
authors = ["Fabio Tudone <fabtud@gmail.com>"]

[dependencies]
bft-grid-core = { path = "../bft-grid-core" }
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread", "sync", "time"] }

[[bin]]
name = "bft-grid-tokio"
path = "src/bin.rs"
