[package]
name = "bftgrid-core"
version = "0.0.1"
edition = "2021"
authors = ["Fabio Tudone <fabtud@gmail.com>"]

[dependencies]
dyn-clone = "1.0.17"
downcast-rs = "1.2.0"
async-trait = "0.1.77"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread", "sync", "time", "net"] }
thiserror = "1.0.63"
