[package]
name = "bftgrid-core"
version = "0.0.1"
edition = "2024"
authors = ["Fabio Tudone <fabtud@gmail.com>"]

[dependencies]
dyn-clone = "1.0.17"
downcast-rs = "2.0.1"
async-trait = "0.1.77"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread", "sync", "time", "net"] }
thiserror = "2.0.12"
