[package]
name = "bftgrid-example"
version = "0.0.1"
edition = "2021"
authors = ["Fabio Tudone <fabtud@gmail.com>"]

[dependencies]
dyn-clone = "1.0.19"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread", "sync", "time", "net"] }
bftgrid-core = { path = "../bftgrid-core" }
bftgrid-mt = { path = "../bftgrid-mt" }
bftgrid-sim = { path = "../bftgrid-sim" }

[[bin]]
name = "bftgrid-local-example"
path = "src/local.rs"

[[bin]]
name = "bftgrid-network-example"
path = "src/network.rs"
