[package]
name = "bftgrid-example"
version = "0.0.1"
edition = "2021"
authors = ["Fabio Tudone <fabtud@gmail.com>"]

[dependencies]
dyn-clone = "1.0.20"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread", "sync", "time", "net"] }
bftgrid-core = { path = "../bftgrid-core" }
bftgrid-mt = { path = "../bftgrid-mt" }
bftgrid-sim = { path = "../bftgrid-sim" }
log = "0.4.29"
env_logger = { version = "0.11.9" }

[[bin]]
name = "bftgrid-local-example"
path = "src/local.rs"

[[bin]]
name = "bftgrid-network-example"
path = "src/network.rs"
