[package]
name = "bftgrid-mt"
version = "0.0.1"
edition = "2021"
authors = ["Fabio Tudone <fabtud@gmail.com>"]

[dependencies]
bftgrid-core = { path = "../bftgrid-core" }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread", "sync", "time", "net"] }
async-trait = "0.1.77"
futures = "0.3.30"
dyn-clone = "1.0.17"
thiserror = "1.0.63"
log = "0.4.21"
