[package]
name = "bftgrid-mt"
version = "0.0.1"
edition = "2021"
authors = ["Fabio Tudone <fabtud@gmail.com>"]

[dependencies]
bftgrid-core = { path = "../bftgrid-core" }
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread", "sync", "time", "net"] }
futures = "0.3.32"
dyn-clone = "1.0.20"
thiserror = "2.0.18"
log = "0.4.29"
