[package]
name = "bftgrid-sim"
version = "0.0.1"
edition = "2021"
authors = ["Fabio Tudone <fabtud@gmail.com>"]

[dependencies]
bftgrid-core = { path = "../bftgrid-core" }
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread", "sync", "time", "net"] }
rand_chacha = "0.9.0"
dyn-clone = "1.0.19"
